//
// These are our message types.

message ZmqPBExampleRequest {
	required string request_string = 1;
	required int32 request_number = 2;
}

message ZmqPBExampleResponse {
	required string response_string = 1;
	required int32 response_number = 2;
}